# cite-citadel

./: .env.example  .gitattributes  .gitignore  AGENT_INGEST.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE.md  README.md  SCHEMA.md  SECURITY.md  citadel.cmd  citadel.ps1  codecov.yml  okf-wiki.cmd  okf-wiki.ps1  pyproject.toml
.claude/skills/bench-model/: SKILL.md
.claude/skills/open-pr/: SKILL.md
.claude/skills/verify-corpus/: SKILL.md
.claude/skills/verify-example/: SKILL.md  ground-truth.md
.github/: copilot-instructions.md  dependabot.yml  pages-index.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
citadel/: __init__.py  __main__.py  capture.py  catalogs.py  cli.py  config.py  curate.py  doctor.py  extract.py  extract_ole.py  failures.py  grammar.py  ingest.py  linkgraph.py  lint.py  llm.py  manifest.py  okf.py  open_points.py  pdftext.py  progress.py  rawsource.py  refresh.py  repo.py  runlock.py  server.py  status.py  store.py  store_core.py  transcribe.py  validate.py  viewer.py  wikigit.py  workspace.py
citadel/rules/: AGENT_INGEST.md  README.md  SCHEMA.md  core.md  schema.md
citadel/rules/formats/: image.md  office.md  pdf.md  repo.md  transcripts.md
citadel/rules/genres/: chat.md  contract.md  cv.md  email.md  first-person.md  meeting-minutes.md  prose.md  publication.md  social.md  transcript.md
citadel/rules/tasks/: curate.md  delete.md  ingest.md  reconcile.md
citadel/templates/: env.example
citadel/viewer/: __init__.py  app.css  app.js  template.html
corpora/beverages/: README.md
corpora/beverages/raw/: aurora-bulletin-2024.md  aurora-bulletin-2026.md  brewing-science-notes.md  coffee-guide.md  coffee-health-faq.md  matcha-and-preparation.md  tea-processing-and-cultivars.md  thornbury-tea-blog.md
corpora/beverages/wiki/: .citadel_ingested.json  index.md  log.md
corpora/clockwork/: README.md
corpora/clockwork/repo-src/: CHANGELOG.md  README.md  pyproject.toml
corpora/clockwork/repo-src-wave2/: CHANGELOG.md  README.md  pyproject.toml
corpora/clockwork/repo-src/docs/: design.md
corpora/clockwork/repo-src/src/: scheduler.py
corpora/clockwork/wiki/: .citadel_ingested.json  index.md  log.md
corpora/counterfactual-atlas/: README.md
corpora/counterfactual-atlas/raw/: aldervane-primer-extract.md  almanac-of-kelvarra-1998.md  brann-tidal-survey-1987.md  ferrick-workshop-notes.md  instrument-works-catalogue-1992.md  saltglass-and-the-shore.md
corpora/flurfunk/: README.md  citadel.toml
corpora/flurfunk/raw/: announcement.md  application-cover-letter.md  cv.md  forum-support-thread.md  interview-transcript-founder.md  slack-export-platform-team.txt  tweet-thread.md
corpora/flurfunk/wiki/: .citadel_ingested.json  index.md  log.md
corpora/gazette/: README.md  make_pdfs.py
corpora/gazette/raw/: press-release.md
corpora/injection-resistance/: README.md
corpora/kelvarra/: README.md
corpora/kontor/: README.md  make_office.py
corpora/leuchtfeuer/: README.md
corpora/literature/: README.md
corpora/pemberley/: README.md
corpora/project-history/: README.md
docs/: audit-2026-07.md  capture.md  configuration.md  demo.html  index.md  karpathy-llm-wiki.md  maintenance.md  mcp.md  okf-reference.md  refactor-plan.md  troubleshooting.md
raw/: aeropress.md  arabica-vs-robusta.md  aurora-coffee-blog.md  brewing-ratios.md  caffeine.md  coffee-grinders.md  coffee-health.md  coffee-history-trade.md  coffee-origins.md  coffee-processing.md  coffee.md  cold-brew-guide.md  cold-brew-notes.md  cold-brew.md  decaffeination.md  espresso-and-cafe-culture.md  espresso-extraction.md  espresso.md  french-press.md  grind-size.md  latte-art.md  milk-drinks.md  pour-over.md  roast-levels.md  tea-guide.md  tea-health-faq.md  tea-history-and-trade.md  water-for-coffee.md
src/okf_wiki/: __init__.py  __main__.py  cli.py  config.py  extract.py  ingest.py  lint.py  llm.py  manifest.py  okf.py  progress.py  repo.py  server.py  store.py  validate.py  viewer.py
tests/: conftest.py  test_abbreviations.py  test_capture.py  test_cli.py  test_config_env.py  test_curate.py  test_define.py  test_discovery.py  test_doctor.py  test_extract.py  test_extract_ole.py  test_failures.py  test_failures_catalog.py  test_force.py  test_grammar.py  test_ingest.py  test_ingest_audio.py  test_ingest_chunking.py  test_ingest_core.py  test_ingest_dedup.py  test_ingest_discovery.py  test_ingest_lint_store.py  test_ingest_office_images.py  test_ingest_progress.py  test_ingest_provenance.py  test_ingest_reconcile_delete.py  test_ingest_staging.py  test_llm.py  test_manifest.py  test_neighbors.py  test_netdrive.py  test_okf.py  test_open_points.py  test_packaging.py  test_pdftext.py  test_progress.py  test_rawsource.py  test_refresh.py  test_repo.py  test_rules.py  (+11 more)
wiki/: .citadel_ingested.json  .okf_ingested.json  index.md  log.md
wiki/abbreviations/: ey-extraction-yield.md  index.md  tds-total-dissolved-solids.md
wiki/concepts/: aeropress.md  arabica-and-robusta.md  aurora-ritual.md  brewing-ratios.md  caffeine-and-health.md  caffeine-content-in-coffee.md  caffeine-in-coffee.md  caffeine-in-tea.md  coffee-and-health.md  coffee-brewing-ratios.md  coffee-grinders.md  coffee-history-and-trade.md  coffee-history.md  coffee-origins.md  coffee-processing.md  coffee-storage.md  coffee-trade.md  coffee.md  cold-brew.md  decaf.md  decaffeination.md  espresso-extraction.md  espresso.md  french-press.md  grind-size.md  grinding.md  index.md  l-theanine.md  matcha.md  milk-drinks.md  milk-steaming-and-latte-art.md  moka-pot.md  pour-over.md  roast-levels.md  roasting.md  tea-antioxidants-and-tannins.md  tea-brewing-temperature-and-time.md  tea-brewing.md  tea-growing-and-harvesting.md  tea-history-and-trade.md  (+4 more)
wiki/objects/: aurora-midnight.md  canton-mist.md  index.md  lin-s-evening.md  thornbury-lin-breakfast.md
wiki/organizations/: caffe-aurora.md  index.md  thornbury-and-lin.md
wiki/persons/: edmund-thornbury.md  index.md  lina-marchetti.md  mei-lin.md
wiki/sources/: index.md
(+318 files in other folders)
