[build-system]
# hatchling >= 1.27 for PEP 639 license metadata (SPDX `license` string + `license-files`).
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "cite-citadel"
# Single-sourced: __version__ in citadel/__init__.py (see [tool.hatch.version]).
dynamic = ["version"]
# Vendor-neutral by design: the distributed identity (name/description/keywords) names no provider —
# the coding-agent CLI is user-supplied. Pinned by test_packaging.py so a rename can't smuggle a mark in.
description = "cite-citadel — an LLM-maintained, fully-cited personal wiki in the Open Knowledge Format, fed by a coding-agent CLI you already have logged in, with an MCP search server. Every fact is cited to its source; nothing is invented."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Markus Neusinger" }]
keywords = [
    "wiki",
    "okf",
    "open-knowledge-format",
    "knowledge-base",
    "mcp",
    "llm",
    "citations",
    "provenance",
    "markdown",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
# Ingest runs through a coding-agent CLI you already have logged in, so there is
# no LLM SDK / API-key dependency here — just the MCP server SDK and a YAML parser.
dependencies = ["mcp>=1.2", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/MarkusNeusinger/cite-citadel"
Repository = "https://github.com/MarkusNeusinger/cite-citadel"
Issues = "https://github.com/MarkusNeusinger/cite-citadel/issues"

# uv installs the `dev` group by default on `uv sync` (PEP 735) — the ONLY place dev deps live.
[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.15"]

[project.scripts]
citadel = "citadel.cli:main"

[tool.hatch.version]
path = "citadel/__init__.py"

[tool.hatch.build.targets.wheel]
# Non-Python package data (citadel/rules/*.md, citadel/templates/*) ships automatically:
# hatchling includes every file under a listed package directory.
packages = ["citadel"]

[tool.hatch.build.targets.sdist]
# The sdist otherwise mirrors the VCS tree. Trim everything that is dev/CI/test scaffolding and does
# not belong in the distributed package — none of it is imported by the installed code, and the
# corpora tree (raw sources + the committed showcase wiki + its manifest) is large. The WHEEL is
# unaffected (it ships only the `citadel` package). Keep this list in sync.
exclude = [
    "/corpora",              # test corpora incl. the beverages showcase wiki + .citadel_ingested.json
    "/.claude",              # skills + hidden corpus answer keys (ground-truth.md)
    "/.github",              # workflows + copilot-instructions
    "/uv.lock",              # dev lockfile
    "/CLAUDE.md",            # contributor architecture notes
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP007", # pyupgrade: use X | Y instead of Optional[X] / Union[X, Y]
    "UP045", # pyupgrade: use X | None instead of Optional[X]
]
ignore = [
    "E501", # line too long (the formatter owns wrapping; prose comments may run long)
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
known-first-party = ["citadel"]
split-on-trailing-comma = false
